--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "scripts": {
     "postinstall": "electron-rebuild -f",
     "dev": "concurrently \"npm run build:watch\" \"npm run electron:dev\"",
-    "build": "npm run build:main && npm run build:renderer && npm run build:preload && npm run build:overlay",
+    "copy:static": "node -e \"const fs=require('fs');const p=require('path');['renderer/index.html','renderer/styles.css','overlay/overlay.html','overlay/overlay.css'].forEach(f=>{const s=p.join('src',f),d=p.join('dist',f);fs.mkdirSync(p.dirname(d),{recursive:true});fs.copyFileSync(s,d)})\"",
+    "build": "npm run build:main && npm run build:renderer && npm run build:preload && npm run build:overlay && npm run copy:static",
     "build:main": "esbuild src/main/index.ts --bundle --platform=node --outfile=dist/main/index.js --external:electron --external:electron-store --external:uiohook-napi --external:ffmpeg-static --sourcemap",
     "build:renderer": "esbuild src/renderer/index.ts --bundle --outfile=dist/renderer/index.js --sourcemap",
     "build:preload": "esbuild src/preload/index.ts --bundle --platform=node --outfile=dist/preload/index.js --external:electron --sourcemap",
